--- a/_posts/2011-03-10-merhaba.md
+++ b/_posts/2011-03-10-merhaba.md
@@ -13,12 +13,12 @@ share: true
 ---
 
 
-Yıllar hızlı bir şekikde gecmekte  be bende bu süre zarfında    bır blog sitesi  açayım 
-dıyordum.
-Hevesım  yada arzum her neyse yıllar sürdü ve yine yine inş blogumun kapanmasıda tersine kısa olmaz:)
+Yıllar hızlı bir şekilde gecmekte ve   bende bu süre zarfında    bir blog sitesi  açayım 
+diyordum.
+Hevesim  yada arzum her neyse yıllar sürdü ve  inş bloğumun kapanmasıda tersine kısa olmaz:)
 
-Bu Kadarlık yeter.
+Bu kadarlık yeter.
 
-Bir dahaki yazmımı  domain (alan adı) alımı, jekyll blog motorunu kullanarak github  da 
+Bir daha ki yazımı  domain (alan adı) alımı, jekyll blog motorunu kullanarak github da 
 nasıl host edeceğimi yazacağım
  
